fixed footer issue overlapping with form and basic styling additions

--- a/app/assets/stylesheets/landingpages.scss
+++ b/app/assets/stylesheets/landingpages.scss
@@ -20,47 +20,3 @@ h1 {
   margin: auto;
   width: 70%;
 }
-
-#login {
-  padding-top: 10em;
-  height: 100vh;
-
-  .form-container {
-    text-align: center;
-  }
-
-  #sign-up {
-    margin-top: 6em;
-  }
-
-  #about {
-    text-decoration: underline;
-
-    &:focus {
-      outline: none;
-    }
-  }
-}
-
-#landingpages-form {
-  background-image: image-url("bidaero.jpg");
-  background-size: 100% auto;
-  height: 100vh;
-
-  .about {
-    margin-top: 1em;
-    padding: 3em 0;
-    background: rgba(255, 255, 255, 0.5);
-    display: none;
-    width: 60%;
-  }
-
-  .close {
-    margin: -2em 1em;
-  }
-
-  .text {
-    width: 70%;
-    margin: auto;
-  }
-}
